# Accessibility-Assistant

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  GRADIO_UI.md  README.md  SUMMARY.md  accessibility_rag.py  app.py  config.py  examples.py  games.json  gradio_ui.py  main.py  pyproject.toml  rag_assistant.py  rag_assistant_optimized.py  rag_optimized_v2.py  requirements-dev.txt  requirements.txt
chroma_db/: chroma.sqlite3
tests/: test_accessibility_rag.py
